[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/IntroductionSprite.png" type="Texture" id=1]
[ext_resource path="res://Fontes/Minecraftia-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/InfoPopup.gd" type="Script" id=3]
[ext_resource path="res://Sprites/TestAutomationTask/TaskBackground.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Task.gd" type="Script" id=5]
[ext_resource path="res://Sprites/TestAutomationTask/TaskStatusFrame.png" type="Texture" id=6]
[ext_resource path="res://Sprites/TestAutomationTask/TryAgainButton2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/TestAutomationTask/taskfinished.png" type="Texture" id=8]
[ext_resource path="res://Sprites/TestAutomationTask/task (2).png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.901961, 0.270588, 0.223529, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Root" type="Node2D"]

[node name="Task" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( -59, 189 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskBackground1" type="Sprite" parent="Task"]
position = Vector2( 320, 180 )
texture = ExtResource( 9 )

[node name="TaskBackground" type="Sprite" parent="Task"]
visible = false
position = Vector2( 320, 180 )
texture = ExtResource( 4 )

[node name="CloseButton" type="Button" parent="Task"]
show_behind_parent = true
margin_left = 395.0
margin_top = 38.0
margin_right = 421.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskTitle" type="RichTextLabel" parent="Task"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 136.0
margin_top = 46.0
margin_right = -336.0
margin_bottom = -301.0
rect_pivot_offset = Vector2( 7, 145 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "Validacao de testes automatizados"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Terminal" type="Node2D" parent="Task"]

[node name="DesiredOutput" type="RichTextLabel" parent="Task/Terminal"]
anchor_left = 0.521
anchor_top = 1.0
anchor_right = 0.523
anchor_bottom = 1.069
margin_left = 149.0
margin_top = 164.0
margin_right = 390.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 35, 30 )
custom_colors/default_color = Color( 0.901961, 0.270588, 0.223529, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "Retornar x+y"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inputs" type="RichTextLabel" parent="Task/Terminal"]
anchor_left = 0.521
anchor_top = 1.0
anchor_right = 0.523
anchor_bottom = 1.069
margin_left = 148.0
margin_top = 109.0
margin_right = 390.0
margin_bottom = 159.0
rect_pivot_offset = Vector2( 35, 30 )
custom_colors/default_color = Color( 0.588235, 0.976471, 0.458824, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "Receber número w
Receber número x
Receber número y
Receber número z"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutputTitle" type="RichTextLabel" parent="Task"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 224.0
margin_top = 224.0
margin_right = -336.0
margin_bottom = -123.0
custom_colors/default_color = Color( 0.901961, 0.270588, 0.223529, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "Saída esperada"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputTitle" type="RichTextLabel" parent="Task"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 135.0
margin_top = 224.0
margin_right = -458.0
margin_bottom = -123.0
rect_pivot_offset = Vector2( -796, -76 )
custom_colors/default_color = Color( 0.588235, 0.976471, 0.458824, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "Entradas"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DesiredOutputValue" type="RichTextLabel" parent="Task"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 223.0
margin_top = 237.0
margin_right = -337.0
margin_bottom = -110.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "25"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputsValues" type="RichTextLabel" parent="Task"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 135.0
margin_top = 237.0
margin_right = -435.0
margin_bottom = -110.0
rect_pivot_offset = Vector2( -796, -76 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "10, 15"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskStatusFrameStep5" type="Sprite" parent="Task"]
position = Vector2( 502, 260 )
texture = ExtResource( 6 )
hframes = 3

[node name="TaskStatusFrameStep4" type="Sprite" parent="Task"]
position = Vector2( 501, 209 )
texture = ExtResource( 6 )
hframes = 3

[node name="TaskStatusFrameStep3" type="Sprite" parent="Task"]
position = Vector2( 501, 157 )
texture = ExtResource( 6 )
hframes = 3

[node name="TaskStatusFrameStep2" type="Sprite" parent="Task"]
position = Vector2( 501, 105 )
texture = ExtResource( 6 )
hframes = 3

[node name="TaskStatusFrameStep1" type="Sprite" parent="Task"]
position = Vector2( 501, 53 )
texture = ExtResource( 6 )
hframes = 3

[node name="TimeBar" type="Panel" parent="Task"]
margin_left = 144.0
margin_top = 312.0
margin_right = 520.0
margin_bottom = 326.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectOutputButton" type="Button" parent="Task"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 366.0
margin_top = 223.0
margin_right = -238.0
margin_bottom = -102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncorrectOutputButton" type="Button" parent="Task"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 324.0
margin_top = 223.0
margin_right = -283.0
margin_bottom = -102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoPopup" type="Control" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="InfoPopup"]
position = Vector2( 320, 180 )
scale = Vector2( 1, 1.00559 )
texture = ExtResource( 1 )

[node name="TaskDescription" type="RichTextLabel" parent="InfoPopup"]
anchor_left = 0.521
anchor_top = 1.0
anchor_right = 0.523
anchor_bottom = 1.069
margin_left = 214.0
margin_top = 135.0
margin_right = 471.0
margin_bottom = 226.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "Engenheiros de software são responsáveis pela construção de testes automatizados e pelo controle de qualidade de programas. Garanta que todos os testes estejam logicamente corretos respondendo se estão certos ou errados com base nas entradas e o resultado esperado disponibilizados."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="InfoPopup"]
show_behind_parent = true
margin_left = 471.0
margin_top = 134.0
margin_right = 496.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainPopup" type="Control" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainPopupBackground" type="Sprite" parent="TryAgainPopup"]
position = Vector2( 320, 180 )
texture = ExtResource( 7 )

[node name="TryAgainPopupButtonText" type="RichTextLabel" parent="TryAgainPopup"]
anchor_left = 0.521
anchor_top = 1.0
anchor_right = 0.523
anchor_bottom = 1.069
margin_left = -56.44
margin_top = -163.0
margin_right = 30.28
margin_bottom = -174.84
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "Tentar novamente"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainPopupText" type="RichTextLabel" parent="TryAgainPopup"]
anchor_left = 0.521
anchor_top = 1.0
anchor_right = 0.523
anchor_bottom = 1.069
margin_left = -169.44
margin_top = -218.0
margin_right = 152.28
margin_bottom = -200.84
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "             Você falhou ao classificar os testes entre corretos
	e incorretos. Para passar nesse minijogo você deve acertar 
  ao menos 75% das respostas. Tente novamente para continuar."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainButton" type="Button" parent="TryAgainPopup"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 269.0
margin_top = 187.0
margin_right = -269.0
margin_bottom = -140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="TryAgainPopup"]
show_behind_parent = true
margin_left = 471.0
margin_top = 135.0
margin_right = 496.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskFinishedPopup" type="Control" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskFinishedBackground" type="Sprite" parent="TaskFinishedPopup"]
position = Vector2( 320, 180 )
texture = ExtResource( 8 )

[node name="EarnedScore" type="RichTextLabel" parent="TaskFinishedPopup"]
anchor_left = 0.521
anchor_top = 1.0
anchor_right = 0.523
anchor_bottom = 1.069
margin_left = -100.44
margin_top = -154.0
margin_right = -1.72
margin_bottom = -155.84
rect_pivot_offset = Vector2( 41, 41 )
custom_colors/default_color = Color( 0.588235, 0.976471, 0.458824, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "+100 pontos
+10 moeadas"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskFInishedText" type="RichTextLabel" parent="TaskFinishedPopup"]
anchor_left = 0.521
anchor_top = 1.0
anchor_right = 0.523
anchor_bottom = 1.069
margin_left = -100.44
margin_top = -220.0
margin_right = 143.28
margin_bottom = -171.84
rect_pivot_offset = Vector2( 41, 41 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "Parabéns! Você completou mais uma tarefa. Ao validar os testes, voce garante que todos os sistemas serão desenvolvidos com qualidade, uma vez que cada etapa do algoritmo passa a ser testada ao longo de todo o processo."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="TaskFinishedPopup"]
show_behind_parent = true
margin_left = 471.0
margin_top = 135.0
margin_right = 496.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Task/CloseButton" to="Task" method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Task/CorrectOutputButton" to="Task" method="_on_CorrectOutputButton_pressed"]
[connection signal="pressed" from="Task/IncorrectOutputButton" to="Task" method="_on_IncorrectOutputButton_pressed"]
[connection signal="pressed" from="InfoPopup/CloseButton" to="InfoPopup" method="_on_CloseButton_pressed"]
[connection signal="pressed" from="TryAgainPopup/TryAgainButton" to="Task" method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="TryAgainPopup/CloseButton" to="Task" method="_on_CloseButton_pressed"]
[connection signal="pressed" from="TaskFinishedPopup/CloseButton" to="Task" method="_on_CloseButton_pressed"]
